--- a/miniprogram/app.wxss
+++ b/miniprogram/app.wxss
@@ -3,6 +3,7 @@
 @import "colorui/icon.wxss"; */
 /* @import "app.css"; 你的项目css */
 @import "colorui/main.wxss";
+@import "colorui/icon.wxss";
 page {
   height: 100%;
   background-color: #FABF01;
