--- a/miniprogram/pages/home/enterWritten/enterWritten.wxml
+++ b/miniprogram/pages/home/enterWritten/enterWritten.wxml
@@ -1,2 +1,9 @@
 <!--miniprogram/pages/home/enterWritten/enterWritten.wxml-->
+<cu-custom bgColor="bg-yellow" isBack="{{true}}" >
+	<view slot="content"></view>
+	<view slot="backText">模拟笔试</view>
+</cu-custom>
 <text>笔试进入界面</text>
+<navigator url="../examWritten/examWritten?id={{bank.id}}">
+  <button>开始考试</button>
+</navigator>
