--- a/miniprogram/pages/home/examWritten/examWritten.wxss
+++ b/miniprogram/pages/home/examWritten/examWritten.wxss
@@ -1,11 +1,11 @@
-page {
+
+.bank-wrap {
   background: white;
+  padding-bottom: 200rpx;
 }
 .bank-title {
-  /* position: absolute; */
-  /* left: 34rpx; */
   margin-left: 34rpx;
-  margin-top: 42rpx;
+  padding-top: 42rpx;
   width: 676rpx;
   height: 160rpx;
   color: rgba(16, 16, 16, 1);
@@ -14,11 +14,9 @@ page {
   font-family: PingFangSC-regular;
 }
 .score-time {
-  /* position: absolute; */
   margin-left: 34rpx;
-  margin-top: 24rpx;
-  margin-bottom: 10rpx;
-  width: 378rpx;
+  margin-top: 65rpx;
+  margin-bottom: 30rpx;
   height: 40rpx;
   color: rgba(16, 16, 16, 1);
   font-size: 28rpx;
@@ -78,7 +76,6 @@ page {
 .submit {
   position: relative;
   left: 254rpx;
-  top: 61rpx;
   width: 242rpx;
   height: 70rpx;
   line-height: 64rpx;
@@ -89,7 +86,8 @@ page {
   text-align: center;
   font-family: PingFang SC;
   border: 4rpx solid rgba(0, 0, 0, 1);
-  margin: 100rpx 0 200rpx;
+  /* margin: 100rpx 0 200rpx; */
+  transform: translate3d(0, 100%, 0);
 }
 .timer {
   position: fixed;
@@ -106,4 +104,61 @@ page {
   font-family: -apple-system;
   border: 4rpx solid rgba(250, 191, 1, 1);
 }
+.bg-sbumit {
+  background: rgba(250, 191, 1, 1);
+  position: absolute;
+  height: 100vh;
+  width: 100vw;
+  z-index: 100;
+  top: 0;
+  left: 0;
+}
+.detail {
+  position: absolute;
+  left: 66rpx;
+  top: 314rpx;
+  width: 616rpx;
+  height: 430rpx;
+  line-height: 52rpx;
+  border-radius: 50rpx;
+  background-color: rgba(255, 255, 255, 0.47);
+  color: rgba(16, 16, 16, 1);
+  font-size: 36rpx;
+  text-align: center;
+  box-shadow: 0rpx 8rpx 18rpx 0rpx rgba(178, 178, 178, 0.4);
+  font-family: -apple-system;
+  border: 1rpx solid rgba(255, 255, 255, 0);
+  padding: 120rpx;
+  line-height: 64rpx;
+}
+.show {
+  display: block;
+}
+.hide {
+  display: none;
+}
 
+.my-btn {
+  position: absolute;
+  width: 246rpx;
+  height: 94rpx;
+  top: 796rpx;
+  line-height: 90rpx;
+  border-radius: 20rpx;
+  background-color: rgba(250, 191, 1, 1);
+  color: rgba(16, 16, 16, 1);
+  font-size: 36rpx;
+  text-align: center;
+  box-shadow: 0rpx 4rpx 12rpx 0rpx rgba(0, 0, 0, 0.33);
+  font-family: PingFang SC;
+  border: 4rpx solid rgba(0, 0, 0, 1);
+}
+.unfinished .continute {
+  left: 112rpx;
+}
+.unfinished .complete {
+  left: 408rpx;
+}
+.finished .complete {
+
+}
