--- a/miniprogram/pages/home/score/score.wxss
+++ b/miniprogram/pages/home/score/score.wxss
@@ -2,18 +2,18 @@
 .score1{
   position: absolute;
   left: 244rpx;
-  top: 30rpx;
+  top: 180rpx;
   width: 262rpx;
   height: 190rpx;
   color: rgba(16, 16, 16, 1);
   font-size: 200rpx;
   text-align: left;
-  font-family: 方正汉真广标-标准;
+  font-family: "方正汉真广标-标准";
 }
 .blank{
   position: absolute;
   left: 66rpx;
-  top: 332rpx;
+  top: 482rpx;
   width: 616rpx;
   height: 550rpx;
   line-height: 52rpx;
@@ -32,36 +32,35 @@
   width: 222rpx;
   height: 78rpx;
   line-height: 40rpx;
-  color: rgba(91, 107, 115, 1);
   font-size: 32rpx;
   text-align: center;
   font-family: Microsoft Yahei;
+  color: rgba(16, 16, 16, 1);
   padding: 20rpx;
   width: 32%;
   text-align: center;
-  border:1px solid black;
   outline-style:solid;
 	outline-width:2rpx;
 }
 .qusetionType{
   position: absolute;
-  top: 406rpx;
+  top: 556rpx;
 }
 .singleChoice{
   position: absolute;
-  top: 484rpx;
+  top: 634rpx;
 }
 .multipleChoice{
   position: absolute;
-  top:562rpx;
+  top:712rpx;
 }
 .bianchengti{
   position: absolute;
-  top: 640rpx;
+  top: 790rpx;
 }
 .wendati{
   position: absolute;
-  top: 718rpx;
+  top: 868rpx;
 }
 .accuracy,.score2,.score3,.score4,.score5{
   position: absolute;
@@ -69,41 +68,40 @@
   width: 222rpx;
   height: 78rpx;
   line-height: 40rpx;
-  color: rgba(91, 107, 115, 1);
   font-size: 32rpx;
   text-align: center;
+  color: rgba(16, 16, 16, 1);
   font-family: Microsoft Yahei;
   padding: 20rpx;
   width: 32%;
   text-align: center;
-  border:1px solid black;
   outline-style:solid;
 	outline-width:2rpx;
 }
 .accuracy{
   position: absolute;
-  top: 406rpx;
+  top: 556rpx;
 }
 .score2{
   position: absolute;
-  top: 484rpx;
+  top: 634rpx;
 }
 .score3{
   position: absolute;
-  top: 562rpx;
+  top: 712rpx;
 }
 .score4{
   position: absolute;
-  top:640rpx;
+  top:790rpx;
 }
 .score5{
   position: absolute;
-  top: 718rpx;
+  top: 868rpx;
 }
 .button1{
   position: absolute;
   left: 82rpx;
-  top: 980rpx;
+  top: 1130rpx;
   width: 264rpx;
   height: 76rpx;
   border-radius: 20rpx;
@@ -113,12 +111,13 @@
   text-align: center;
   box-shadow: 0rpx 4rpx 12rpx 0rpx rgba(0, 0, 0, 0.33);
   font-family: Microsoft Yahei;
-  border: 4rpx solid rgba(0, 0, 0, 1);
+  border: 2rpx solid rgba(0, 0, 0, 1);
+  line-height: 70rpx;
 }
 .button2{
   position: absolute;
   left: 390rpx;
-  top: 980rpx;
+  top: 1130rpx;
   width: 264rpx;
   height: 76rpx;
   border-radius: 20rpx;
@@ -128,5 +127,7 @@
   text-align: center;
   box-shadow: 0rpx 4rpx 12rpx 0rpx rgba(0, 0, 0, 0.33);
   font-family: Microsoft Yahei;
-  border: 4rpx solid rgba(0, 0, 0, 1);
+  border: 2rpx solid rgba(0, 0, 0, 1);
+  line-height: 70rpx;
+
 }
