--- a/miniprogram/pages/home/enterInterview/enterInterview.wxss
+++ b/miniprogram/pages/home/enterInterview/enterInterview.wxss
@@ -24,6 +24,8 @@
   font-size: 56rpx;
   text-align: left;
   font-family: PingFangSC-regular;
+  line-height: 63rpx;
+
 }
 .num {
   position: absolute;
