--- a/miniprogram/pages/home/score/score.wxml
+++ b/miniprogram/pages/home/score/score.wxml
@@ -1,19 +1,29 @@
 <!--miniprogram/pages/home/score/score.wxml-->
-<cu-custom bgColor="bg-yellow" isBack="{{true}}" >
-	<view slot="content"></view>
+<!-- 导航条不应该有返回的 -->
+<cu-custom bgColor="bg-yellow" isBack="{{true}}" > 
+	<view slot="content">总分</view>
 	<view slot="backText">模拟笔试</view>
 </cu-custom>
-<view class="score1">80</view>
+<view class="score1">{{score}}</view>
 <view class="blank"></view>
 <view class="qusetionType">题型</view>
 <view class="singleChoice">单选题</view>
-<view class="multipleChoice">不定项选择题</view>
-<view class="bianchengti">编程题</view>
-<view class="wendati">问答题</view>
+<view class="multipleChoice">多项选择题</view>
+<view class="budingxiang">不定项选题</view>
+<view class="panduan">判断题</view>
+<view class="tiankong">填空题</view>
+<view class="paixu">排序题</view>
 <view class="accuracy">正确率/%</view>
 <view class="score2">90</view>
 <view class="score3">80</view>
 <view class="score4">90</view>
 <view class="score5">60</view>
+<view class="score6">60</view>
+<view class="score7">60</view>
 <navigator url="../index/index" open-type="switchTab"><button  class="button1">返回题库</button></navigator>
 <navigator url="../wrongAll/wrongAll"><button class="button2">查看错题</button></navigator>
+<!-- <van-row>
+  <van-col span="8" offset="4">span: 8</van-col>
+  <van-col span="8" offset="13">span: 8</van-col>
+</van-row> -->
+
