--- a/miniprogram/pages/home/endInterview/endInterview.wxml
+++ b/miniprogram/pages/home/endInterview/endInterview.wxml
@@ -1,6 +1,14 @@
 <!--miniprogram/pages/home/endInterview/endInterview.wxml-->
 <cu-custom bgColor="bg-yellow" isBack="{{true}}" >
 	<view slot="content"></view>
-	<view slot="backText">模拟面试</view>
+	<view slot="backText">面试</view>
 </cu-custom>
-<text>面试结束界面</text>
+<view class="blankBox"></view>
+<view class="answer1">面试常见评分标准：
+<view> ⭕衣着整洁整齐 </view> 
+<view>⭕面带笑容 </view>
+<view>⭕语言流畅无语病</view>
+</view>
+<navigator url="../viewQuestions/viewQuestions"> <button class="allExam">查看完整试卷 </button> </navigator>
+<navigator url="../index/index" open-type="switchTab"> <button class="questiobBank">返回题库</button> </navigator>
+
