--- a/miniprogram/pages/questionBank/endInterviewQuestion/endInterviewQuestion.wxml
+++ b/miniprogram/pages/questionBank/endInterviewQuestion/endInterviewQuestion.wxml
@@ -1,4 +1,8 @@
 <!--miniprogram/pages/questionBank/endInterviewQuestion/endInterviewQuestion.wxml-->
+<cu-custom bgColor="bg-yellow" isBack="{{true}}" >
+	<view slot="content"></view>
+	<view slot="backText">面试</view>
+</cu-custom>
 <view class="blankBox"></view>
 <view class="answer1">面试常见评分标准：
 <view> ⭕衣着整洁整齐 </view> 
