--- a/miniprogram/pages/questionBank/index/index.wxss
+++ b/miniprogram/pages/questionBank/index/index.wxss
@@ -9,6 +9,7 @@
   text-align: center;
   border: 2rpx solid rgba(187, 187, 187, 1);
   background: #fff;
+  top: 130rpx;
 }
 .written {
   left: 0px;
@@ -42,7 +43,7 @@
 swiper {
   position: absolute;
   /* left: -1px; */
-  top: 148rpx;
+  top: 248rpx;
   width: 100%;
   height: 400rpx;
   background: gray;
@@ -50,7 +51,7 @@ swiper {
 .title {
   position: absolute;
   left: 0px;
-  top: 586rpx;
+  top: 686rpx;
   width: 750rpx;
   /* width: 375px; */
   height: 132rpx;
@@ -83,7 +84,7 @@ swiper {
 }
 .bank-wrap {
   position: absolute;
-  top: 718rpx;
+  top: 818rpx;
   width: 100%;
   line-height: 40rpx;
   border-radius: 0rpx;
@@ -110,12 +111,15 @@ swiper {
   position: absolute;
   left: 40rpx;
   /* top: 509px; */
-  width: 24r0px;
-  height: 84rrpx;
+  width: 240rpx;
+  height: 84rpx;
   color: rgba(16, 16, 16, 1);
   font-size: 30rpx;
   text-align: left;
   font-family: PingFangSC-regular;
+  overflow: hidden;
+  text-overflow:ellipsis;
+  white-space: nowrap;
 }
 .exam-icon {
   position: absolute;
