--- a/miniprogram/pages/home/endInterview/endInterview.wxml
+++ b/miniprogram/pages/home/endInterview/endInterview.wxml
@@ -9,6 +9,6 @@
 <view>⭕面带笑容 </view>
 <view>⭕语言流畅无语病</view>
 </view>
-<navigator url="../viewQuestions/viewQuestions"> <button class="allExam">查看完整试卷 </button> </navigator>
-<navigator url="../index/index" open-type="switchTab"> <button class="questiobBank">返回题库</button> </navigator>
+<navigator url="../wrongAll/wrongAll?class=面试"> <button class="allExam">查看完整试卷 </button> </navigator>
+<navigator url="../index/index" open-type="switchTab"> <button class="questiobBank">返回首页</button> </navigator>
 
