--- a/miniprogram/pages/home/enterInterview/enterInterview.wxml
+++ b/miniprogram/pages/home/enterInterview/enterInterview.wxml
@@ -11,16 +11,16 @@
 <view class="type">
   <text>请选择录制方式</text>
 </view>
-<navigator url="../examInterview/examInterview?type=audio&id={{bank.id}}">
-  <view class="audio">
+<!-- <navigator url="../examInterview/examInterview?type=audio&id={{bank.id}}"> -->
+  <view bindtap="handleAudioStartExam" class="audio">
     <text>音频</text>
   </view>
-</navigator>
-<navigator url="../examInterview/examInterview?type=video&id={{bank.id}}">
-  <view class="video">
+<!-- </navigator> -->
+<!-- <navigator url="../examInterview/examInterview?type=video&id={{bank.id}}"> -->
+  <view bindtap="handleVideoStartExam" class="video">
     <text>视频</text>
   </view>
-</navigator>
+<!-- </navigator> -->
 
 <!-- <view class="yuyinWrap">
   <textarea class='yuyinCon' placeholder='请输入内容' value='{{content}}'></textarea>
