--- a/miniprogram/pages/home/score/score.wxss
+++ b/miniprogram/pages/home/score/score.wxss
@@ -7,7 +7,7 @@
   height: 190rpx;
   color: rgba(16, 16, 16, 1);
   font-size: 200rpx;
-  text-align: left;
+  text-align: center;
   font-family: "方正汉真广标-标准";
 }
 .blank{
