--- a/miniprogram/pages/home/wrongAll/wrongAll.wxss
+++ b/miniprogram/pages/home/wrongAll/wrongAll.wxss
@@ -181,3 +181,202 @@
   font-family: Microsoft Yahei;
   border: 4rpx solid rgba(0, 0, 0, 1);
 }
+.menu {
+  position: absolute;
+  left: 668rpx;
+  top: 329rpx;
+  width: 64rpx;
+  height: 64rpx;
+  font-size: 62rpx;
+}
+.bank-wrap {
+  background: white;
+  padding-bottom: 150rpx;
+}
+.bank-title {
+  margin-left: 34rpx;
+  padding-top: 42rpx;
+  width: 676rpx;
+  height: 160rpx;
+  color: rgba(16, 16, 16, 1);
+  font-size: 56rpx;
+  text-align: left;
+  font-family: PingFangSC-regular;
+}
+.score-time {
+  margin-left: 34rpx;
+  margin-top: 65rpx;
+  margin-bottom: 30rpx;
+  height: 40rpx;
+  color: rgba(16, 16, 16, 1);
+  font-size: 28rpx;
+  text-align: left;
+  font-family: PingFangSC-regular;
+}
+.line {
+  /* position: absolute; */
+  width: 750rpx;
+  border: 1rpx solid rgba(187, 187, 187, 1);
+}
+.bank {
+  margin-left: 34rpx;
+  padding-top: 45rpx;
+}
+.radio-question,
+.checkbox-question,
+.blank-question,
+.sort-question {
+  display: flex;
+  flex-direction: column;
+  color: rgba(16, 16, 16, 1);
+  font-size: 30rpx;
+  text-align: left;
+  font-family: PingFangSC-regular;
+  margin-bottom: 15rpx;
+}
+
+.my-choosebox {
+  display: block;
+}
+.my-choosebox text {
+  margin-left: 20rpx;
+}
+.my-choosebox radio {
+  transform: scale(0.6);
+  border-radius: 50%;
+  border: 4rpx solid #ffc200;
+  background: transparent;
+}
+ .my-choosebox checkbox {
+  transform: scale(0.6);
+  border: 4rpx solid #ffc200;
+  background: transparent;
+}
+.blank-question input, .sort-question input {
+  width: 690rpx;
+  height: 72rpx;
+  color: rgba(136, 136, 136, 1);
+  font-size: 28rpx;
+  text-align: left;
+  font-family: -apple-system;
+  border: 1rpx solid rgba(187, 187, 187, 1);
+  padding-left: 1em;
+  margin-top: 10rpx;
+}
+
+.correct-analyse {
+  margin-top: 30rpx;
+  color: rgba(16, 16, 16, 1);
+  font-size: 36rpx;
+  text-align: left;
+  font-family: PingFangSC-regular;
+}
+.comments {
+  padding: 30rpx;
+}
+.comment {
+  position: relative;
+}
+.comment .user {
+  display: flex;
+  justify-content: space-between;
+}
+.like-dot, .user-info {
+  display: flex;
+}
+.user-info .user-name {
+  margin-left: 10rpx;
+}
+.like-dot {
+  margin-right: 20rpx;
+}
+
+.comment .mine {
+  width: 40rpx;
+  height: 40rpx;
+}
+.comment .like {
+  width: 40rpx;
+  height: 40rpx;
+}
+.comment .content {
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 2;
+  padding: 20rpx;
+  text-overflow: ellipsis;
+  height: 100rpx;
+  overflow: hidden;
+  color: rgba(16, 16, 16, 1);
+  font-size: 32rpx;
+  text-align: left;
+  font-family: PingFangSC-regular;
+}
+.view-all {
+  height: 40rpx;
+  color: rgba(163, 163, 163, 1);
+  font-size: 28rpx;
+  text-align: center;
+  font-family: PingFangSC-regular;
+  text-decoration: underline;
+  margin-top: 10rpx;
+}
+.publish {
+  position: relative;
+}
+.publish input {
+  position: absolute;
+  left: 19rpx;
+  padding-right: 177rpx;
+  padding-left: 1em;
+  width: 658rpx;
+  height: 76rpx;
+  color: rgba(136, 136, 136, 1);
+  font-size: 28rpx;
+  text-align: left;
+  font-family: PingFang SC;
+  border: 2rpx solid rgba(187, 187, 187, 1);
+}
+.publish .publish-comment {
+  position: absolute;
+  left: 517rpx;
+  top: 6rpx;
+  width: 150rpx;
+  height: 62rpx;
+  border-radius: 10rpx;
+  background-color: rgba(255, 255, 255, 1);
+  color: rgba(163, 163, 163, 1);
+  font-size: 36rpx;
+  text-align: center;
+  font-family: PingFang SC;
+  border: 4rpx solid rgba(163, 163, 163, 1);
+}
+.next-size {
+  position: relative;
+  background: white;
+  height: 200rpx;
+}
+.next-question {
+  float: right;
+  width: 164rpx;
+  height: 72rpx;
+  border-radius: 20rpx;
+  background-color: rgba(250, 191, 1, 1);
+  color: rgba(16, 16, 16, 1);
+  font-size: 36rpx;
+  text-align: center;
+  font-family: PingFang SC;
+  border: 4rpx solid rgba(0, 0, 0, 1);
+  margin-right: 40rpx;
+  line-height: 72rpx;
+}
+.page-size {
+  margin: 0 auto;
+  width: 60rpx;
+  height: 40rpx;
+  color: rgba(16, 16, 16, 1);
+  font-size: 28rpx;
+  text-align: left;
+  font-family: PingFangSC-regular;
+  padding-top: 100rpx;
+}
