--- a/miniprogram/pages/center/myCenter/myCenter.wxss
+++ b/miniprogram/pages/center/myCenter/myCenter.wxss
@@ -6,15 +6,30 @@ page{
 .myCenter1{
   position: absolute;
   left: 26rpx;
-  top: 116rpx;
-  width: 678rpx;
-  height: 200rpx;
+  top: 342rpx;
+  width: 698rpx;
+  height: 544rpx;
   line-height: 40rpx;
   border-radius: 16rpx;
   text-align: center;
-  background-color: white;
   box-shadow: 0rpx 2rpx 8rpx 0rpx rgba(250, 191, 1, 0.47);
   border: 1rpx solid rgba(255, 255, 255, 0);
+}
+.line1{
+  position: absolute;
+  left: 0rpx;
+  top: 200rpx;
+  width: 698rpx;
+  height: NaNpx;
+  border: 1rpx solid rgba(250, 191, 1, 0.47);
+}
+.line2{
+  position: absolute;
+  left: 0rpx;
+  top: 376rpx;
+  width: 698rpx;
+  height: NaNpx;
+  border: 1rpx solid rgba(250, 191, 1, 0.47);
 }
 .changeTouxiang{
   position: absolute;
@@ -30,11 +45,11 @@ page{
   .touxiang{
     position: absolute;
     left: 54rpx;
-    top: 6rpx;
+    top: 12rpx;
     width: 188rpx;
-    height: 184rpx;
+    height: 174rpx;
     line-height: 40rpx;
-    background-color: rgba(127, 159, 206, 1);
+    background-color: rgba(255, 255, 255, 1);
     text-align: center;
     border: 1rpx solid rgba(187, 187, 187, 1);
   }
@@ -49,16 +64,50 @@ page{
     text-align: left;
     font-family: PingFangSC-regular;
   }
-  .blankBox1{
+  .nicheng{
+    position: absolute;
+    left: 66rpx;
+    top: 270rpx;
+    width: 146rpx;
+    height: 54rpx;
+    color: rgba(16, 16, 16, 1);
+    font-size: 36rpx;
+    text-align: left;
+    font-family: SourceHanSansSC-regular;
+  }
+  .mingzi{
+    position: absolute;
+    left: 508rpx;
+    top: 270rpx;
+    width: 154rpx;
+    height: 54rpx;
+    color: rgba(154, 152, 152, 1);
+    font-size: 36rpx;
+    text-align: left;
+    font-family: SourceHanSansSC-regular;
+  }
+  .tuichu{
+    position: absolute;
+    left: 66rpx;
+    top: 450rpx;
+    width: 156rpx;
+    height: 54rpx;
+    color: rgba(205, 30, 30, 1);
+    font-size: 36rpx;
+    text-align: left;
+    font-family: SourceHanSansSC-regular;
+  }
+  /* .blankBox1{
     position: absolute;
     left: 26rpx;
-    top: 300rpx;
+    top: 550rpx;
     width: 698rpx;
     height: 200rpx;
     line-height: 40rpx;
     border-radius: 16rpx;
     text-align: center;
+    background-color: white;
     box-shadow: 0rpx 2rpx 8rpx 0rpx rgba(250, 191, 1, 0.47);
     border: 1rpx solid rgba(255, 255, 255, 0);
-  }
+  } */
 
