--- a/miniprogram/pages/home/endInterview/endInterview.wxml
+++ b/miniprogram/pages/home/endInterview/endInterview.wxml
@@ -3,6 +3,9 @@
 	<view slot="content"></view>
 	<view slot="backText">模拟面试</view>
 </cu-custom>
+<view class="video1">(音频/视频)</view>
+<view class="line1"></view>
+<view class="jindu"></view>
 <view class="blankBox"></view>
 <view class="answer1">面试常见评分标准：
 <view> ⭕衣着整洁整齐 </view> 
