--- a/miniprogram/pages/home/endInterview/endInterview.wxss
+++ b/miniprogram/pages/home/endInterview/endInterview.wxss
@@ -1,10 +1,45 @@
 /* miniprogram/pages/home/endInterview/endInterview.wxss */
+.video1{
+  position: absolute;
+  left: 70rpx;
+  top: 175rpx;
+  width: 616rpx;
+  height: 300rpx;
+  border-radius: 20rpx;
+  background-color: rgba(255, 255, 255, 1);
+  color: rgba(16, 16, 16, 1);
+  font-size: 36rpx;
+  text-align: center;
+  font-family: Arial;
+  border: 4rpx solid rgba(0, 0, 0, 1);
+
+}
+.line1{
+  position: absolute;
+  left: 74rpx;
+  top: 440rpx;
+  width: 606rpx;
+  height: NaNpx;
+  border: 1rpx solid rgba(187, 187, 187, 1);
+}
+.jindu{
+  position: absolute;
+  left: 80rpx;
+  top: 430rpx;
+  width: 20rpx;
+  height: 20rpx;
+  line-height: 40rpx;
+  background-color: rgba(12, 12, 12, 1);
+  text-align: center;
+  border: 1rpx solid rgba(187, 187, 187, 1);
+  border-radius: 14rpx;
+}
 .blankBox{
   position: absolute;
   left: 64rpx;
-  top: 184rpx;
+  top: 520rpx;
   width: 616rpx;
-  height: 550rpx;
+  height: 500rpx;
   line-height: 52rpx;
   border-radius: 50rpx;
   background-color: rgba(255, 255, 255, 0.47);
@@ -18,7 +53,7 @@
 .answer1{
   position: absolute;
   left: 126rpx;
-  top: 256rpx;
+  top: 591rpx;
   width: 326rpx;
   height: 290rpx;
   color: rgba(16, 16, 16, 1);
@@ -28,7 +63,7 @@
 }
 .allExam,.questiobBank{
   position: absolute;
-  top: 872rpx;
+  top: 1096rpx;
   width: 302rpx;
   height: 76rpx;
   border-radius: 20rpx;
